--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-darts==0.39.0
-matplotlib==3.10.7
-numpy==2.3.5
-pandas==2.3.3
-pytorch_lightning==2.6.0
-torch==2.9.1
+# ----- Core -----
+numpy
+pandas
+matplotlib
+arch
+tabulate
+
+# ----- PyTorch -----
+torch
 torchvision
 torchaudio
+
+# ----- Lightning -----
+lightning
+pytorch_lightning
+
+# ----- Optuna -----
+optuna
+optuna-integration
+
+# ----- Darts -----
+darts
